ggspectra 0.3.5 (2019-XX-XX)
============================

* Implement copying of attributes of spectral objects into gg objects.

ggspectra 0.3.4 (2019-09-11)
============================

* Update for code-breaking changes in 'tidyr' (>= 1.0.0).

ggspectra 0.3.3-1 (2019-06-09)
==============================

* Add convenience functions to make easier to modify plotting options:
set_annotations_default() and set_w.band_default().
* Add support for simultaneously adding and removing annotations from the
current default by accepting lists of character vectors as argument for
parameter annotations in autoplot() methods.
* Add support in multiplot() for adding a title to the composite figure.
* Add support for setting of the plot caption with autotitle() and as
annotations in autoplot() methods. Make autotitle() a synonim of ggtitle_spct(),
which is now deprecated.
* Track changes in 'photobiology' (>= 0.9.28) adding support fot "how.measured"
attribute in plot titles, subtitles and captions.
* Use a compute panel function instead of a compute group function in
stat_wb_label(), stat_wb_box() and stat_wl_strip(), solving a bug affecting
autoplot() methods when called with multiple spectra.

ggspectra 0.3.2 (2019-02-19)
============================

* Move 'ggplot2' from Imports: to Depends: as the objects returned belong to
classes defined in this package.
* Move 'photobiology' from Imports: to Depends: as the objects accepted as input
belong to classes defined in this package and is natural for users to want to
use specialized methods to operate on them.
* Define autoplot() methods as replacements for plot() methods, which are now
deprecated. All documentation now uses autoplot().
- As 'ggplot2' exports a generic for autoplot() and the expected returned value
is a ggplot which matches the returned value of the methods defined here, we
have renamed them to autoplot(). For backwards compatibility plot() methods
remain available, but their use in new code is deprecated.
